--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://ealeksandrovych.github.io/parcel-1ver",
+  "homepage": "https://SerhiyDm.github.io/ice-cream-lucky-7",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-1ver/"
+    "build": "parcel build src/*.html --public-url /ice-cream-lucky-7/"
   },
   "repository": {
     "type": "git",
